--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-# This is the default format. 
+# This is the default format.
 # For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
 permalink: :categories/:title.html
 
@@ -10,42 +10,44 @@ exclude: [".rbenv-version", "README.md", "Rakefile", "CNAME"]
 auto: true
 pygments: true
 
+markdown: kramdown
+
 #Lista de páginas (na ordem desejada) para o menu principal e seus respectivos links
 navigation:
-  - 
+  -
     url : '/'
     text : 'Home'
-  - 
+  -
     url : '/blog/index.html'
     text : 'Blog'
     layout : 'post'
-  - 
+  -
     url : ''
     text : 'Soluções'
     layout : 'solucoes'
-  - 
+  -
     url : '/produtos/index.html'
     text : 'Produtos'
-  - 
+  -
     url : '/clientes/index.html'
     text : 'Clientes'
-  - 
+  -
     url : '/contato/index.html'
     text : 'Contato'
-  
-# Themes are encouraged to use these universal variables 
+
+# Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
 title : E-Storage
 author :
-  name : 
+  name :
   email : contato@e-storageonline.com.br
   github : e-storage
   twitter : e_storage
   feedburner : nil
 
 # The production_url is only used when full-domain names are needed
-# such as sitemap.txt 
+# such as sitemap.txt
 # Most places will/should use BASE_PATH to make the urls
 #
 # If you have set a CNAME (pages.github.com) set your custom domain here.
@@ -73,11 +75,11 @@ JB :
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
   #
   # Override this by defining an absolute path to assets here.
-  # ex: 
+  # ex:
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  
+
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change theme here if needed.
@@ -104,15 +106,15 @@ JB :
   # Settings for analytics helper
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
-  #        
+  #
   analytics :
     provider : custom
-    google : 
+    google :
         tracking_id : 'UA-635329-12'
     getclicky :
-      site_id : 
+      site_id :
 
-  # Settings for sharing helper. 
+  # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
   # Set 'provider' to the sharing provider you want to use.
   # Set 'provider' to false to turn sharing off globally.
@@ -120,19 +122,18 @@ JB :
   sharing :
     provider : custom
 
-  # Settings for all other include helpers can be defined by creating 
+  # Settings for all other include helpers can be defined by creating
   # a hash with key named for the given helper. ex:
   #
   #   pages_list :
-  #     provider : "custom"   
+  #     provider : "custom"
   #
   # Setting any helper's provider to 'custom' will bypass the helper code
   # and include your custom code. Your custom file must be defined at:
   #   ./_includes/custom/[HELPER]
   # where [HELPER] is the name of the helper you are overriding.
-  
+
 # paginate defines how many items can be displayed per page
-  
+
 paginate: 6
 paginate_path: "blog/page:num"
-  
